# Hoverboard-Firmware-Hack-Gen2.x-GD32

./: .gitignore  ai_guidelines_v0.md  ai_guidelines_v1.md
Arduino Examples/Autodetect/: Autodetect.ino
Arduino Examples/TestROS2/: TestROS2.ino  ros2serial.h
Arduino Examples/TestSpeed/: TestSpeed.ino  hoverserial.h
Arduino Examples/Test_4Wheeler/: Test_4Wheeler.ino
HoverBoardGigaDevice/: .gitignore  Hoverboard.uvguix.Admin  Hoverboard.uvguix.PAN CF-LX6  Hoverboard.uvoptx  Hoverboard.uvprojx  Makefile  McuViewer.mcuvproj  StmStudio.tsp  add_RTT_console.py  add_RTT_task.py  add_RTT_task_gd32e230.py  bldcFOC_greenfield_brief.md  bldcFOC_implementation_notes.md  foc.md  generate_sine_table.py  openocd_rtt_32f1x.bat  openocd_rtt_32f2x.bat  pid 3.tsc  pid.tsc  pid.tsp  platformio.ini  rtt.bat  rtt.sh  rtt_plot.py  rtt_read.py  rtt_start.sh  rtt_supervisor.sh  untitled.tsc
HoverBoardGigaDevice/BinariesToFlash/: auto-flash - single try.bat
HoverBoardGigaDevice/Inc/: PilotHoverbike.h  PilotUser.h  RemoteAdc.h  RemoteROS2.h  bldc.h  bldcBC.h  bldcFOC.h  bldcFOC_core.h  bldcSINE.h  comms.h  commsBluetooth.h  commsMasterSlave.h  commutation.h  config.h  configDebug.h  configSelect.h  defines.h  defines_2-1-1.h  defines_2-1-10.h  defines_2-1-11.h  defines_2-1-12.h  defines_2-1-13.h  defines_2-1-14.h  defines_2-1-15.h  defines_2-1-16.h  defines_2-1-18.h  defines_2-1-2.h  defines_2-1-20.h  defines_2-1-22.h  defines_2-1-3.h  defines_2-1-4.h  defines_2-1-5.h  (+25 more)
HoverBoardGigaDevice/Tests/: CMakeLists.txt  test_block_commutation.c  test_commutation.c  test_helper.h  test_svm_commutation.c
(+99 files in other folders)
